--- a/native/keyboard-hook/package.json
+++ b/native/keyboard-hook/package.json
@@ -4,8 +4,8 @@
   "description": "Native keyboard hook for Windows",
   "main": "index.js",
   "scripts": {
-    "install": "node-gyp rebuild --target=$(node -p 'process.versions.electron') --arch=x64 --dist-url=https://electronjs.org/headers",
-    "rebuild": "node-gyp rebuild --target=$(node -p 'process.versions.electron') --arch=x64 --dist-url=https://electronjs.org/headers"
+    "install": "node build.js",
+    "rebuild": "node build.js"
   },
   "keywords": [
     "keyboard",
