--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "clean": "npx rimraf dist || rm -rf dist",
     "build:ts": "node esbuild.config.mjs",
     "build:native": "cd native/keyboard-hook && npm install && npm run rebuild || echo 'Native module build skipped (optional)'",
-    "build": "npm run clean && npm run build:ts && npm run build:native && npx electron-builder --win",
-    "build:linux": "npm run clean && npm run build:ts && npx electron-builder --linux",
-    "build:all": "npm run clean && npm run build:ts && npm run build:native && npx electron-builder --win --linux",
+    "build": "npm run clean && npm run build:ts && npm run build:native && npx electron-builder --win --x64",
+    "build:ia32": "npm run clean && npm run build:ts && npm run build:native && npx electron-builder --win --ia32",
+    "build:all": "npm run clean && npm run build:ts && npm run build:native && npx electron-builder --win --x64 --ia32",
     "build:watch": "node esbuild.config.mjs --watch",
     "dev": "npm-run-all -p build:watch start:electron",
     "start:electron": "wait-on dist/main.js && cross-env NODE_ENV=development electron .",
@@ -87,53 +87,18 @@
         {
           "target": "nsis",
           "arch": [
-            "x64"
+            "x64",
+            "ia32"
           ]
         }
       ],
-      "artifactName": "${productName}-Setup-${version}.${ext}"
+      "artifactName": "${productName}-Setup-${version}-${arch}.${ext}"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "perMachine": true,
       "deleteAppDataOnUninstall": true
-    },
-    "linux": {
-      "target": [
-        {
-          "target": "deb",
-          "arch": ["x64"]
-        }
-      ],
-      "icon": "build/icons/linux",
-      "category": "Education",
-      "synopsis": "Exam browser for SIMAK KHAS Kempek",
-      "description": "Aplikasi browser khusus untuk ujian SIMAK KHAS Kempek dengan fitur kunci keyboard dan monitoring",
-      "desktop": {
-        "Name": "SIMAK Exam Browser",
-        "Comment": "Exam browser for SIMAK KHAS Kempek",
-        "Categories": "Education;Network;",
-        "StartupWMClass": "simak-exam-browser"
-      },
-      "artifactName": "${productName}-${version}-linux-amd64.${ext}"
-    },
-    "deb": {
-      "depends": [
-        "libnss3",
-        "libatk-bridge2.0-0",
-        "libdrm2",
-        "libxkbcommon0",
-        "libxcomposite1",
-        "libxdamage1",
-        "libxfixes3",
-        "libxrandr2",
-        "libgbm1",
-        "libasound2"
-      ],
-      "packageCategory": "Education",
-      "priority": "optional",
-      "maintainer": "SIMAK KHAS Kempek <simakkhas@gmail.com>"
     },
     "publish": {
       "provider": "github",
