--- a/env.example
+++ b/env.example
@@ -10,8 +10,9 @@ ADMIN_PIN=123456
 # Hotkey untuk membuka modal admin
 ADMIN_SHORTCUT=Ctrl+Alt+Shift+A
 
-# URL feed auto-update (opsional, isi jika rilis disajikan dari server/Repo)
-AUTO_UPDATE_URL=https://gitlab+deploy-token-10089497:gldt-xgCKQ9DgFKcPVcxrMWcd@gitlab.com/simak-khas-kempek/simak-exam-browser/-/releases/
+# URL feed auto-update (GitHub Pages)
+# Format: https://<username>.github.io/<repo-name>/
+AUTO_UPDATE_URL=https://sukenda.github.io/simak-exam-browser/
 
 # Sentry config
 SENTRY_DSN=https://db5e61cf96519bd2b7e46afbff6e26cc@o271614.ingest.us.sentry.io/4510430173986816
