feat: implement cheating event tracking and reporting system
- Add cheating event tracking system (cheatingTracker.ts)
- Add cheating report service with batch reporting (cheatingReporter.ts)
- Add student info utility with caching mechanism (studentInfo.ts)
- Track pengerjaan IDs from URL changes (SPA navigation support)
- Track multiple cheating events (shortcuts, window events, downloads, etc.)
- Send cheating reports to backend on app exit
- Save reports to local file for retry if send fails
- Retry pending reports on app startup
- Cache student info immediately after login
- Clear cache only after successful report send
- Prevent sending reports without student info
- Add EXAM_REPORT_SECRET_KEY configuration
- Support multiple pengerjaan IDs in array format
- Add comprehensive logging for debugging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,6 +105,7 @@ jobs:
           EXAM_APP_URL=${{ secrets.EXAM_APP_URL || 'https://simakkhaskempek.com/' }}
           ATTENTION_WEBHOOK_URL=${{ secrets.ATTENTION_WEBHOOK_URL || 'https://api.simakkhaskempek.com/' }}
           ADMIN_PIN=${{ secrets.ADMIN_PIN || 'simakkhaskempek' }}
+          EXAM_REPORT_SECRET_KEY=${{ secrets.EXAM_REPORT_SECRET_KEY || 'zqKcgREsIoeS0r9RTuXRpc2YliJih8K6' }}
           ADMIN_SHORTCUT=${{ secrets.ADMIN_SHORTCUT || 'Ctrl+Alt+Shift+A+H' }}
           AUTO_UPDATE_URL=${PAGES_URL}/
           SENTRY_DSN=${{ secrets.SENTRY_DSN || '' }}
@@ -234,6 +235,7 @@ jobs:
           EXAM_APP_URL=${{ secrets.EXAM_APP_URL || 'https://simakkhaskempek.com/' }}
           ATTENTION_WEBHOOK_URL=${{ secrets.ATTENTION_WEBHOOK_URL || 'https://api.simakkhaskempek.com/' }}
           ADMIN_PIN=${{ secrets.ADMIN_PIN || 'khashebat' }}
+          EXAM_REPORT_SECRET_KEY=${{ secrets.EXAM_REPORT_SECRET_KEY || 'zqKcgREsIoeS0r9RTuXRpc2YliJih8K6' }}
           ADMIN_SHORTCUT=${{ secrets.ADMIN_SHORTCUT || 'Ctrl+Alt+Shift+A' }}
           AUTO_UPDATE_URL=${PAGES_URL}/
           SENTRY_DSN=${{ secrets.SENTRY_DSN || '' }}
