--- a/env.example
+++ b/env.example
@@ -4,6 +4,9 @@ EXAM_APP_URL=https://simak.example.sch.id/exam
 # Endpoint (opsional) untuk mencatat kehilangan fokus
 ATTENTION_WEBHOOK_URL=https://simak.example.sch.id/api/exam/attention
 
+# Secret key untuk mengirim cheating report ke server
+EXAM_REPORT_SECRET_KEY=zqKcgREsIoeS0r9RTuXRpc2YliJih8K6
+
 # Secret admin untuk membuka mode pengawas
 ADMIN_PIN=123456
 
